manifests/price-monitoring/overlays/production/patch-batch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-1-deployment
spec:
  template:
    spec:
      containers:
        - name: backend-batch-1
          command: ["sidekiq", "-C", "config/sidekiq/crawl_process.yml", "-e", "production"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-2-deployment
spec:
  template:
    spec:
      containers:
        - name: backend-batch-2
          command: ["sidekiq", "-C", "config/sidekiq/general_process.yml", "-e", "production"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-3-deployment
spec:
  template:
    spec:
      containers:
        - name: backend-batch-3
          command: ["sidekiq", "-C", "config/sidekiq/crawl_process_2.yml", "-e", "production"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-4-deployment
spec:
  template:
    spec:
      containers:
        - name: backend-batch-4
          command: ["sidekiq", "-C", "config/sidekiq/crawl_process_3.yml", "-e", "production"]
