manifests/price-monitoring/overlays/production/patch-loadbalancer-ips.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  loadBalancerIP: 10.15.100.210
---
apiVersion: v1
kind: Service
metadata:
  name: backend-db-service
spec:
  loadBalancerIP: 10.15.100.212
---
apiVersion: v1
kind: Service
metadata:
  name: backend-redis-service
spec:
  loadBalancerIP: 10.15.100.213
---
apiVersion: v1
kind: Service
metadata:
  name: backend-playwright-service
spec:
  loadBalancerIP: 10.15.100.215
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  loadBalancerIP: 10.15.100.217
